--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="login-button">
-        <a href="login.php" class="btn">Login</a>
+        <a href="login.html" class="btn">Login</a>
     </div>
 
     <div class="homepage-container">
