--- a/dashboard.html
+++ b/dashboard.html
@@ -179,7 +179,7 @@
     // Logout button functionality
     document.getElementById("logoutBtn").addEventListener("click", async () => {
       await supabase.auth.signOut();
-      window.location.href = "login.html";
+      window.location.href = "index.html";
     });
   </script>
 </body>
