--- a/registermember.html
+++ b/registermember.html
@@ -47,7 +47,7 @@
   <script>
     const supabase = supabase.createClient(
       'https://wlthlwxcmltwescezjlk.supabase.co',
-      'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6IndsdGhsd3hjbWx0d2VzY2V6amxrIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTE0NDQ4MDcsImV4cCI6MjA2NzAyMDgwN30.tvUeTFVDdQomDHHV0JSpsXHP9IbQVkOhEvBpCglzI-o'
+      'process.env.SUPABASE_KEY'
     );
 
     document.getElementById("registerForm").addEventListener("submit", async (e) => {
