--- a/dashboard.html
+++ b/dashboard.html
@@ -163,7 +163,7 @@
   <script>
     const supabase = window.supabase.createClient(
       'https://wlthlwxcmltwescezjlk.supabase.co', // Replace with your Supabase project URL
-      'process.env.SUPABASE_KEY'                 // Replace with your anon public key
+      'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6IndsdGhsd3hjbWx0d2VzY2V6amxrIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTE0NDQ4MDcsImV4cCI6MjA2NzAyMDgwN30.tvUeTFVDdQomDHHV0JSpsXHP9IbQVkOhEvBpCglzI-o'                 // Replace with your anon public key
     );
 
     // Check if user is logged in
