--- a/login.html
+++ b/login.html
@@ -7,128 +7,76 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"/>
   <style>
     body {
-      background: linear-gradient(135deg, #74ebd5, #ACB6E5);
+      background: url('cover/walpaper.jpg') no-repeat center center fixed;
+      background-size: cover;
       display: flex;
       justify-content: center;
       align-items: center;
       height: 100vh;
       margin: 0;
+      color: #fff;
     }
     .login-container {
-      background: white;
+      background: rgba(255,255,255,0.1);
       padding: 30px;
       border-radius: 15px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+      width: 100%;
       max-width: 400px;
-      width: 100%;
       text-align: center;
+      backdrop-filter: blur(5px);
     }
+    .form-control {
+      background: rgba(255,255,255,0.1);
+      border: 1px solid rgba(255,255,255,0.3);
+      color: #fff;
+    }
+    .form-control::placeholder { color: #bbb; }
     .btn-login {
-      width: 100%;
-      background-color: #007bff;
-      color: white;
+      background: linear-gradient(45deg, #00d9a5, #00796b);
       border: none;
-    }
-    .btn-attendance {
-      background-color: #28a745;
-      color: white;
-      border: none;
-    }
-    .footer {
-      position: fixed;
-      bottom: 10px;
-      text-align: center;
-      width: 100%;
-      font-size: 14px;
-      color: #333;
-    }
-    .alert-custom {
-      background-color: #f8d7da;
-      color: #721c24;
       padding: 10px;
-      margin-bottom: 10px;
-      border-radius: 8px;
+      border-radius: 5px;
+      color: #fff;
+      width: 100%;
+      transition: 0.3s;
+    }
+    .btn-login:hover { transform: translateY(-2px); }
+    .alert-custom {
+      background: rgba(255,0,0,0.8);
+      color: #fff;
+      padding: 10px; border-radius: 5px;
+      margin-bottom: 15px;
+    }
+    a { color: #00d9a5; }
+    a:hover { color: #00796b; text-decoration: underline; }
+    .footer {
+      position: absolute; bottom: 0;
+      width: 100%; text-align: center;
+      padding: 10px; background: rgba(0,121,107,0.5);
+      color: white;
     }
   </style>
 </head>
 <body>
-
-<div class="login-container">
-  <h2>Admin Login</h2>
-  <div id="error" class="alert-custom" style="display: none;"></div>
-
-  <form id="loginForm">
-    <div class="mb-3">
-      <input type="email" class="form-control" name="email" placeholder="Email" required />
-    </div>
-    <div class="mb-3">
-      <input type="password" class="form-control" name="password" placeholder="Password" required />
-    </div>
-    <button type="submit" class="btn btn-login">Login</button>
-  </form>
-
-  <p class="mt-2"><a href="forgot_password.html">Forgot Password?</a></p>
-  <p class="mt-3">Don't have an account? <a href="register.html">Register here</a></p>
-
-  <div class="mt-3">
-    <a href="view_attendance.html" class="btn btn-attendance">View Attendance</a>
+  <div class="login-container">
+    <h2>Login</h2>
+    <div id="error" class="alert-custom" style="display: none;"></div>
+    <form id="loginForm">
+      <div class="mb-3">
+        <input type="email" name="email" class="form-control" placeholder="Email" required />
+      </div>
+      <div class="mb-3">
+        <input type="password" name="password" class="form-control" placeholder="Password" required />
+      </div>
+      <button type="submit" class="btn-login">Login</button>
+    </form>
+    <p class="mt-2"><a href="forgot_password.html">Forgot Password?</a></p>
+    <p class="mt-3">Don't have an account? <a href="register.html">Register here</a></p>
   </div>
-</div>
+  <div class="footer">&copy; 2025 UCKGC Phil. All Rights Reserved.</div>
 
-<div class="footer">
-  &copy; 2025 UCKGC Phil. All Rights Reserved.
-</div>
-
-<!-- Supabase JS -->
-<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-
-<!-- Your login logic -->
-<script>
-  const supabase = supabase.createClient(
-    'https://wlthlwxcmltwescezjlk.supabase.co',
-    'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6IndsdGhsd3hjbWx0d2VzY2V6amxrIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTE0NDQ4MDcsImV4cCI6MjA2NzAyMDgwN30.tvUeTFVDdQomDHHV0JSpsXHP9IbQVkOhEvBpCglzI-o'
-  );
-
-  document.getElementById("loginForm").addEventListener("submit", async function (e) {
-    e.preventDefault();
-
-    const email = this.email.value.trim();
-    const password = this.password.value.trim();
-    const errorBox = document.getElementById("error");
-
-    // Clear old error
-    errorBox.style.display = "none";
-    errorBox.textContent = "";
-
-    try {
-      const { data: admin, error } = await supabase
-        .from("admins")
-        .select("*")
-        .eq("email", email)
-        .single();
-
-      if (error || !admin) {
-        errorBox.textContent = "Admin not found.";
-        errorBox.style.display = "block";
-        return;
-      }
-
-      // Plaintext password comparison
-      if (admin.password === password) {
-        localStorage.setItem("admin_id", admin.id);
-        localStorage.setItem("admin_email", admin.email);
-        window.location.href = "dashboard.html";
-      } else {
-        errorBox.textContent = "Incorrect password.";
-        errorBox.style.display = "block";
-      }
-    } catch (err) {
-      console.error(err);
-      errorBox.textContent = "An error occurred. Please try again.";
-      errorBox.style.display = "block";
-    }
-  });
-</script>
-
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+  <script src="login.js"></script>
 </body>
 </html>
