--- a/login.html
+++ b/login.html
@@ -72,7 +72,7 @@
       <button type="submit" class="btn-login">Login</button>
     </form>
     <p class="mt-2"><a href="forgot_password.html">Forgot Password?</a></p>
-    <p class="mt-3">Don't have an account? <a href="registeradmin.html">Register here</a></p>
+    <p class="mt-3">Don't have an account? <a href="register.html">Register here</a></p>
   </div>
   <div class="footer">&copy; 2025 UCKGC Phil. All Rights Reserved.</div>
 
