--- a/register.html
+++ b/register.html
@@ -3,111 +3,32 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Register Member</title>
+  <title>Register Admin | UCKGC</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"/>
-  <style>
-    body {
-      background: linear-gradient(135deg, #74ebd5, #ACB6E5);
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      padding: 20px;
-    }
-    .register-container {
-      background: #fff;
-      padding: 30px;
-      border-radius: 15px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
-      max-width: 450px;
-      width: 100%;
-    }
-  </style>
+  <link rel="stylesheet" href="register.css"/>
 </head>
 <body>
+  <!-- Loading Spinner -->
+  <div id="loadingSpinner" class="loading-spinner"><div></div></div>
+
   <div class="register-container">
-    <h2 class="text-center mb-4">Register Member</h2>
+    <h2>Register Admin</h2>
+    <p id="errorMessage" class="error-message"></p>
+
     <form id="registerForm">
-      <input type="text" class="form-control mb-3" name="first_name" placeholder="First Name" required>
-      <input type="text" class="form-control mb-3" name="last_name" placeholder="Last Name" required>
-      <input type="text" class="form-control mb-3" name="address" placeholder="Address" required>
-      <select class="form-select mb-3" name="category" required>
-        <option value="">Select Category</option>
-        <option value="Kid">Kid</option>
-        <option value="Youth">Youth</option>
-        <option value="Adult">Adult</option>
-      </select>
-      <button type="submit" class="btn btn-primary w-100">Register & Generate QR</button>
+      <input type="email" class="form-control mb-3" name="email" placeholder="Email" required />
+      <input type="password" class="form-control mb-3" name="password" placeholder="Password" required />
+      <input type="password" class="form-control mb-3" name="confirm_password" placeholder="Confirm Password" required />
+      <input type="text" class="form-control mb-3" name="location" placeholder="Church Location ex. Uckgc-Sampalok, Cabatuan, Isabela" required />
+      <button type="submit" class="btn btn-register">Register</button>
+      <p class="mt-3">Already have an account? <a href="login.html" class="text-light">Login here</a></p>
     </form>
-    <div id="result" class="mt-4 text-center"></div>
   </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-  <script src="https://cdn.jsdelivr.net/npm/qrcode/build/qrcode.min.js"></script>
-  <script>
-    const supabase = supabase.createClient(
-      'https://wlthlwxcmltwescezjlk.supabase.co',
-      'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6IndsdGhsd3hjbWx0d2VzY2V6amxrIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTE0NDQ4MDcsImV4cCI6MjA2NzAyMDgwN30.tvUeTFVDdQomDHHV0JSpsXHP9IbQVkOhEvBpCglzI-o'
-    );
+  <div class="footer">
+    &copy; 2024 UCKGC Phil. All Rights Reserved.
+  </div>
 
-    document.getElementById("registerForm").addEventListener("submit", async (e) => {
-      e.preventDefault();
-      const form = e.target;
-      const first_name = form.first_name.value.trim();
-      const last_name = form.last_name.value.trim();
-      const address = form.address.value.trim();
-      const category = form.category.value;
-      const qrData = `${first_name}_${last_name}`.toUpperCase();
-
-      const { data: userSession, error: userError } = await supabase.auth.getUser();
-      const user = userSession?.user;
-
-      if (!user) {
-        document.getElementById("result").innerHTML = `<div class="alert alert-warning">Not logged in</div>`;
-        return;
-      }
-
-      // Generate QR code as Blob
-      const qrBlob = await QRCode.toBlob(qrData, { type: "image/png" });
-      const fileName = `${qrData}_${Date.now()}.png`;
-
-      const { data: uploaded, error: uploadError } = await supabase
-        .storage
-        .from("qrcodes")
-        .upload(fileName, qrBlob, { contentType: "image/png" });
-
-      if (uploadError) {
-        document.getElementById("result").innerHTML = `<div class="alert alert-danger">Upload failed: ${uploadError.message}</div>`;
-        return;
-      }
-
-      const { data: publicData } = supabase.storage.from("qrcodes").getPublicUrl(fileName);
-      const publicUrl = publicData.publicUrl;
-
-      const { error: insertError } = await supabase
-        .from("attendees")
-        .insert({
-          first_name,
-          last_name,
-          address,
-          category,
-          qr_code_url: publicUrl,
-          admin_id: user.id
-        });
-
-      if (insertError) {
-        document.getElementById("result").innerHTML = `<div class="alert alert-danger">Insert failed: ${insertError.message}</div>`;
-        return;
-      }
-
-      document.getElementById("result").innerHTML = `
-        <div class="alert alert-success">Member Registered Successfully!</div>
-        <img src="${publicUrl}" class="img-fluid rounded mt-2" />
-        <p class="mt-2"><strong>${qrData}</strong></p>
-        <a class="btn btn-success mt-2" href="${publicUrl}" download>Download QR</a>
-      `;
-      form.reset();
-    });
-  </script>
+  <script src="register.js"></script>
 </body>
 </html>
