--- a/register.html
+++ b/register.html
@@ -1,34 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
   <title>Register Admin | UCKGC</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"/>
-  <link rel="stylesheet" href="register.css"/>
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+  />
+  <style>
+    body {
+      background: url('cover/walpaper.jpg') no-repeat center center fixed;
+      background-size: cover;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+      color: #fff;
+    }
+    .register-container {
+      background: rgba(255,255,255,0.1);
+      padding: 30px;
+      border-radius: 15px;
+      width: 100%;
+      max-width: 400px;
+      text-align: center;
+      backdrop-filter: blur(5px);
+    }
+    .form-control { background: rgba(255,255,255,0.2); border: none; color: #fff; }
+    .form-control::placeholder { color: #ddd; }
+    .btn-register {
+      background-color: rgba(0,121,107,0.8);
+      border: none;
+      padding: 10px;
+      width: 100%;
+      color: #fff;
+      transition: 0.3s;
+    }
+    .btn-register:hover { background-color: rgba(0,77,64,0.8); transform: scale(1.05); }
+    .error-message { color: #ffdddd; margin-bottom: 10px; }
+    .footer {
+      position: fixed;
+      bottom: 0; width: 100%;
+      background: rgba(0,121,107,0.5);
+      text-align: center;
+      padding: 10px;
+    }
+    .loading-spinner {
+      display: none;
+      position: fixed;
+      top: 50%; left: 50%;
+      transform: translate(-50%, -50%);
+      z-index: 1000;
+    }
+    .loading-spinner div {
+      width: 40px; height: 40px;
+      border: 4px solid #f3f3f3;
+      border-top: 4px solid #3498db;
+      border-radius: 50%;
+      animation: spin 2s linear infinite;
+    }
+    @keyframes spin { to { transform: rotate(360deg); } }
+  </style>
 </head>
 <body>
-  <!-- Loading Spinner -->
   <div id="loadingSpinner" class="loading-spinner"><div></div></div>
 
   <div class="register-container">
     <h2>Register Admin</h2>
     <p id="errorMessage" class="error-message"></p>
-
     <form id="registerForm">
-      <input type="email" class="form-control mb-3" name="email" placeholder="Email" required />
-      <input type="password" class="form-control mb-3" name="password" placeholder="Password" required />
-      <input type="password" class="form-control mb-3" name="confirm_password" placeholder="Confirm Password" required />
-      <input type="text" class="form-control mb-3" name="location" placeholder="Church Location ex. Uckgc-Sampalok, Cabatuan, Isabela" required />
-      <button type="submit" class="btn btn-register">Register</button>
-      <p class="mt-3">Already have an account? <a href="login.html" class="text-light">Login here</a></p>
+      <input type="email" name="email" placeholder="Email" class="form-control mb-3" required/>
+      <input type="password" name="password" placeholder="Password" class="form-control mb-3" required/>
+      <input type="password" name="confirm_password" placeholder="Confirm Password" class="form-control mb-3" required/>
+      <input type="text" name="location" placeholder="Church Location" class="form-control mb-3" required/>
+      <button type="submit" class="btn-register">Register</button>
+      <p class="mt-3">Already have an account? <a href="login.html" style="color:#fff">Login here</a></p>
     </form>
   </div>
 
-  <div class="footer">
-    &copy; 2024 UCKGC Phil. All Rights Reserved.
-  </div>
+  <div class="footer">&copy; 2024 UCKGC Phil. All Rights Reserved.</div>
 
-  <script src="register.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+  <script src="registeradmin.js"></script>
 </body>
 </html>
