--- a/register.html
+++ b/register.html
@@ -83,6 +83,6 @@
   <div class="footer">&copy; 2024 UCKGC Phil. All Rights Reserved.</div>
 
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-  <script src="registeradmin.js"></script>
+  <script src="register.js"></script>
 </body>
 </html>
