--- a/register.html
+++ b/register.html
@@ -1,88 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
+  <meta charset="UTF-8">
   <title>Register Admin | UCKGC</title>
-  <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-  />
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     body {
-      background: url('cover/walpaper.jpg') no-repeat center center fixed;
-      background-size: cover;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      margin: 0;
-      color: #fff;
+      background: url('cover/walpaper.jpg') center/cover fixed;
+      display:flex; justify-content:center; align-items:center; height:100vh; margin:0;
     }
-    .register-container {
-      background: rgba(255,255,255,0.1);
-      padding: 30px;
-      border-radius: 15px;
-      width: 100%;
-      max-width: 400px;
-      text-align: center;
-      backdrop-filter: blur(5px);
+    .container {
+      background:rgba(255,255,255,0.1); padding:30px; border-radius:15px; max-width:400px;
+      width:100%; text-align:center; backdrop-filter:blur(5px); color:#fff;
     }
-    .form-control { background: rgba(255,255,255,0.2); border: none; color: #fff; }
-    .form-control::placeholder { color: #ddd; }
+    .form-control { background:rgba(255,255,255,0.2); border:none; color:#fff; }
+    .form-control::placeholder { color:#ddd; }
     .btn-register {
-      background-color: rgba(0,121,107,0.8);
-      border: none;
-      padding: 10px;
-      width: 100%;
-      color: #fff;
-      transition: 0.3s;
+      background:rgba(0,121,107,0.8); border:none; padding:10px; width:100%;
+      color:#fff; transition:0.3s;
     }
-    .btn-register:hover { background-color: rgba(0,77,64,0.8); transform: scale(1.05); }
-    .error-message { color: #ffdddd; margin-bottom: 10px; }
-    .footer {
-      position: fixed;
-      bottom: 0; width: 100%;
-      background: rgba(0,121,107,0.5);
-      text-align: center;
-      padding: 10px;
+    .btn-register:hover { background:rgba(0,77,64,0.8); transform:scale(1.05); }
+    .spinner { display:none; margin:10px auto; border:4px solid rgba(255,255,255,0.3);
+      border-top:4px solid #fff; border-radius:50%; width:30px; height:30px;
+      animation:spin 1s linear infinite;
     }
-    .loading-spinner {
-      display: none;
-      position: fixed;
-      top: 50%; left: 50%;
-      transform: translate(-50%, -50%);
-      z-index: 1000;
-    }
-    .loading-spinner div {
-      width: 40px; height: 40px;
-      border: 4px solid #f3f3f3;
-      border-top: 4px solid #3498db;
-      border-radius: 50%;
-      animation: spin 2s linear infinite;
-    }
-    @keyframes spin { to { transform: rotate(360deg); } }
+    @keyframes spin { from {transform:rotate(0)} to {transform:rotate(360deg)} }
+    .msg { margin-top:10px; font-size:0.9rem; }
+    .msg.error { color:#ff8c8c; }
+    .msg.success { color:#8cff8c; }
   </style>
 </head>
 <body>
-  <div id="loadingSpinner" class="loading-spinner"><div></div></div>
-
-  <div class="register-container">
+  <div class="container">
     <h2>Register Admin</h2>
-    <p id="errorMessage" class="error-message"></p>
-    <form id="registerForm">
-      <input type="email" name="email" placeholder="Email" class="form-control mb-3" required/>
-      <input type="password" name="password" placeholder="Password" class="form-control mb-3" required/>
-      <input type="password" name="confirm_password" placeholder="Confirm Password" class="form-control mb-3" required/>
-      <input type="text" name="location" placeholder="Church Location" class="form-control mb-3" required/>
+    <div id="msg" class="msg"></div>
+    <form id="regForm">
+      <input type="email" name="email" class="form-control mb-3" placeholder="Email" required>
+      <input type="password" name="password" class="form-control mb-3" placeholder="Password" required>
+      <input type="password" name="confirm" class="form-control mb-3" placeholder="Confirm Password" required>
+      <input type="text" name="location" class="form-control mb-3" placeholder="Church Location" required>
       <button type="submit" class="btn-register">Register</button>
-      <p class="mt-3">Already have an account? <a href="login.html" style="color:#fff">Login here</a></p>
+      <div class="spinner" id="spinner"></div>
     </form>
+    <p class="mt-3"><a href="login.html" style="color:#fff;">Already have an account? Login here</a></p>
   </div>
 
-  <div class="footer">&copy; 2024 UCKGC Phil. All Rights Reserved.</div>
-
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-  <script src="register.js"></script>
+  <script>
+    const supabase = supabase.createClient(
+      'https://wlthlwxcmltwescezjlk.supabase.co', 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6IndsdGhsd3hjbWx0d2VzY2V6amxrIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTE0NDQ4MDcsImV4cCI6MjA2NzAyMDgwN30.tvUeTFVDdQomDHHV0JSpsXHP9IbQVkOhEvBpCglzI-o'
+    );
+    const form = document.getElementById('regForm');
+    const msg = document.getElementById('msg');
+    const spinner = document.getElementById('spinner');
+
+    form.addEventListener('submit', async e => {
+      e.preventDefault();
+      msg.textContent = ''; msg.className = 'msg';
+      spinner.style.display = 'block';
+
+      const { email, password, confirm, location } = form;
+      if (password.value !== confirm.value) {
+        spinner.style.display = 'none';
+        msg.textContent = "Passwords don't match"; msg.classList.add('error');
+        return;
+      }
+
+      const code = Math.floor(100000 + Math.random()*900000);
+      const { error:insertErr } = await supabase
+        .from('email_verifications')
+        .insert([{ email:email.value, password_hash: password.value, location:location.value, code }]);
+
+      if (insertErr) {
+        spinner.style.display = 'none';
+        msg.textContent = "Error storing verification."; msg.classList.add('error');
+        return;
+      }
+
+      // Call Edge Function to send email
+      const { error:fnErr } = await supabase.functions.invoke('send_verification', {
+        body: { email: email.value, code }
+      });
+
+      spinner.style.display = 'none';
+      if (fnErr) {
+        msg.textContent = "Failed to send email."; msg.classList.add('error');
+      } else {
+        msg.textContent = "Verification code sent to your email."; msg.classList.add('success');
+        setTimeout(() => window.location = `verify.html?email=${encodeURIComponent(email.value)}`, 1500);
+      }
+    });
+  </script>
 </body>
 </html>
