--- a/register.html
+++ b/register.html
@@ -1,47 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Register Admin | UCKGC</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" />
   <style>
     body {
       background: url('cover/walpaper.jpg') center/cover fixed;
-      display:flex; justify-content:center; align-items:center; height:100vh; margin:0;
+      display: flex; justify-content: center; align-items: center; height: 100vh;
     }
     .container {
-      background:rgba(255,255,255,0.1); padding:30px; border-radius:15px; max-width:400px;
-      width:100%; text-align:center; backdrop-filter:blur(5px); color:#fff;
+      background: rgba(255,255,255,0.1); padding: 30px; border-radius: 15px;
+      max-width: 400px; width: 100%; backdrop-filter: blur(5px); color: #fff;
     }
-    .form-control { background:rgba(255,255,255,0.2); border:none; color:#fff; }
-    .form-control::placeholder { color:#ddd; }
+    .form-control { background: rgba(255,255,255,0.2); border: none; color: #fff; }
+    .form-control::placeholder { color: #ddd; }
     .btn-register {
-      background:rgba(0,121,107,0.8); border:none; padding:10px; width:100%;
-      color:#fff; transition:0.3s;
+      background: rgba(0,121,107,0.8); border: none; padding: 10px; width: 100%;
+      color: #fff; transition: 0.3s;
     }
-    .btn-register:hover { background:rgba(0,77,64,0.8); transform:scale(1.05); }
-    .spinner { display:none; margin:10px auto; border:4px solid rgba(255,255,255,0.3);
-      border-top:4px solid #fff; border-radius:50%; width:30px; height:30px;
-      animation:spin 1s linear infinite;
-    }
-    @keyframes spin { from {transform:rotate(0)} to {transform:rotate(360deg)} }
-    .msg { margin-top:10px; font-size:0.9rem; }
-    .msg.error { color:#ff8c8c; }
-    .msg.success { color:#8cff8c; }
+    .btn-register:hover { background: rgba(0,77,64,0.8); transform: scale(1.05); }
+    .msg { margin-top: 10px; font-size: 0.9rem; }
+    .msg.error { color: #ff8c8c; }
+    .msg.success { color: #8cff8c; }
   </style>
 </head>
 <body>
   <div class="container">
     <h2>Register Admin</h2>
     <div id="msg" class="msg"></div>
-    <form id="regForm">
-      <input type="email" name="email" class="form-control mb-3" placeholder="Email" required>
-      <input type="password" name="password" class="form-control mb-3" placeholder="Password" required>
-      <input type="password" name="confirm" class="form-control mb-3" placeholder="Confirm Password" required>
-      <input type="text" name="location" class="form-control mb-3" placeholder="Church Location" required>
+    <form id="register-form">
+      <input type="email" name="email" class="form-control mb-3" placeholder="Email" required />
+      <input type="password" name="password" class="form-control mb-3" placeholder="Password" required />
+      <input type="password" name="confirm" class="form-control mb-3" placeholder="Confirm Password" required />
       <button type="submit" class="btn-register">Register</button>
-      <div class="spinner" id="spinner"></div>
     </form>
     <p class="mt-3"><a href="login.html" style="color:#fff;">Already have an account? Login here</a></p>
   </div>
@@ -53,48 +46,38 @@
       'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6IndsdGhsd3hjbWx0d2VzY2V6amxrIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTE0NDQ4MDcsImV4cCI6MjA2NzAyMDgwN30.tvUeTFVDdQomDHHV0JSpsXHP9IbQVkOhEvBpCglzI-o'
     );
 
-    const form = document.getElementById('regForm');
+    const form = document.getElementById('register-form');
     const msg = document.getElementById('msg');
-    const spinner = document.getElementById('spinner');
 
-    form.addEventListener('submit', async e => {
+    form.addEventListener('submit', async (e) => {
       e.preventDefault();
-      msg.textContent = ''; msg.className = 'msg';
-      spinner.style.display = 'block';
+      msg.textContent = '';
+      msg.className = 'msg';
 
-      const { email, password, confirm, location } = form;
-      if (password.value !== confirm.value) {
-        spinner.style.display = 'none';
-        msg.textContent = "Passwords don't match";
-        msg.classList.add('error');
+      const email = form.email.value.trim();
+      const password = form.password.value;
+      const confirm = form.confirm.value;
+
+      if (password !== confirm) {
+        msg.textContent = "Passwords do not match";
+        msg.classList.add("error");
         return;
       }
 
-      const code = Math.floor(100000 + Math.random()*900000);
-
-      const { error:insertErr } = await supabase
-        .from('email_verifications')
-        .insert([{ email:email.value, password_hash: password.value, location:location.value, code }]);
-
-      if (insertErr) {
-        spinner.style.display = 'none';
-        msg.textContent = "Error storing verification.";
-        msg.classList.add('error');
-        return;
-      }
-
-      const { error:fnErr } = await supabase.functions.invoke('send_verification', {
-        body: { email: email.value, code }
+      const { error } = await supabase.auth.signUp({
+        email,
+        password
       });
 
-      spinner.style.display = 'none';
-      if (fnErr) {
-        msg.textContent = "Failed to send email.";
-        msg.classList.add('error');
+      if (error) {
+        msg.textContent = error.message;
+        msg.classList.add("error");
       } else {
-        msg.textContent = "Verification code sent to your email.";
-        msg.classList.add('success');
-        setTimeout(() => window.location = `verify.html?email=${encodeURIComponent(email.value)}`, 1500);
+        msg.textContent = "Check your email to verify your account.";
+        msg.classList.add("success");
+        setTimeout(() => {
+          window.location.href = "verify.html";
+        }, 2000);
       }
     });
   </script>
